added banner image

--- a/fu/templates/issue.html
+++ b/fu/templates/issue.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1 id="masthead">{{ issue.pub_date }}</h1>
+<h1 id="masthead"><span>the-fu.com: {{ issue.pub_date }}</span></h1>
 
 <ul id="nav">
 <li>Home</li>
