--- a/fu/templates/base.html
+++ b/fu/templates/base.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>The FU</title>
+<head><title>the-fu.com (gameplans for dreamers)</title>
 
 <style media="screen" type="text/css">
 @import "/site_media/css/site.css" ;
