--- a/fu/templates/issue.html
+++ b/fu/templates/issue.html
@@ -23,6 +23,11 @@
 
 {{ main_article.content|markdown }}
 
+<div id="byline">
+<div class="article-thumb"><img src="/site_media/images/gray.png"
+				width="75" height="75" /></div>
+<p>by {{ main_article.author.fullname}}</p>
+</div>
 </div>
 
 <div id="sidebar">
