--- a/fu/templates/issue.html
+++ b/fu/templates/issue.html
@@ -1,5 +1,7 @@
-{% load markup %}
 {% extends "base.html" %}
+{% load markup %}
+{% load thumbnail %}
+
 
 {% block content %}
 <h1 id="masthead"><span>the-fu.com: {{ issue.pub_date }}</span></h1>
@@ -24,8 +26,10 @@
 {{ main_article.content|markdown }}
 
 <div id="byline">
-<div class="article-thumb"><img src="/site_media/images/gray.png"
-				width="75" height="75" /></div>
+<div class="article-thumb">
+<img src="{% thumbnail main_article.author.headshot 65x65 crop,upscale %}"
+     width="65" height="65" />
+</div>
 <p>by {{ main_article.author.fullname}}</p>
 </div>
 </div>
@@ -36,7 +40,9 @@
 {% for article in issue.non_main_articles %}
 
 <div class="article">
-<div class="article-thumb"><img src="/site_media/images/gray.png" width="75" height="75" /></div>
+<div class="article-thumb">
+<img src="{% thumbnail article.author.headshot 65x65 crop,bw,upscale %}" width="65" height="65" />
+</div>
 <h2><a href="{{ article.get_absolute_url }}">{{ article.headline }}</a></h2>
 <p>{{ article.author.fullname }}</p>
 <div class="clear"></div>
