--- a/fu/templates/article.html
+++ b/fu/templates/article.html
@@ -27,8 +27,7 @@
 
 <div id="byline">
 <div class="article-thumb">
-<img src="{% thumbnail main_article.author.headshot 65x65 crop,upscale
-	  %}"
+<img src="{% thumbnail article.author.headshot 65x65 crop,upscale %}"
      width="65" height="65" />
 </div>
 <p>by {{ main_article.author.fullname}}</p>
