--- a/fu/templates/article.html
+++ b/fu/templates/article.html
@@ -30,7 +30,7 @@
 <img src="{% thumbnail article.author.headshot 65x65 crop,upscale %}"
      width="65" height="65" />
 </div>
-<p>by {{ main_article.author.fullname}}</p>
+<p>by {{ article.author.fullname}}</p>
 </div>
 
 </div>
