--- a/media/css/site.css
+++ b/media/css/site.css
@@ -14,6 +14,8 @@ h1 {
   font-weight: bold;
 }
 
+a { border-bottom: #000 dotted 1px;}
+
 #wrapper {
    width: 700px;
    margin: 0 auto;
@@ -36,7 +38,6 @@ h1#masthead span {
 
 ul#nav {
 background-color: #000;
-color: #fddb46;
 margin: 0px;
 list-style: none;
 }
@@ -45,6 +46,10 @@ ul#nav li {
    display: inline;
    font-size: 1.5em;
    padding-right: 5px;
+}
+
+ul#nav a {
+   color: #ffcc33;
 }
 
 #footer{
@@ -99,4 +104,8 @@ p { margin-bottom: 2em;}
 
 a { color: #000; text-decoration: none;}
 
-h2 { font-size: 1.2em;}
+h2 { font-size: 1.1em;}
+
+#sidebar .article { margin-top: 10px; }
+
+#main h2 { font-size: 2em;}
