--- a/fu/templates/base.html
+++ b/fu/templates/base.html
@@ -1,12 +1,12 @@
 <html>
-<head><title>the-fu.com (gameplans for dreamers)</title>
+<head><title>the-fu.com (gameplans for dreamers): {% block title %}{% endblock %}</title>
 
 <style media="screen" type="text/css">
 @import "/site_media/css/site.css" ;
 </style>
 
 </head>
-<body>
+<body class="{% block bodyclass %}{% endblock %}">
 <div id="wrapper">
 {% block content %}{% endblock %}
 
