--- a/fu/templates/flatpages/default.html
+++ b/fu/templates/flatpages/default.html
@@ -1,10 +1,24 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"
-    "http://www.w3.org/TR/REC-html40/loose.dtd">
-<html>
-<head>
-<title>{{ flatpage.title }}</title>
-</head>
-<body>
-{{ flatpage.content }}
-</body>
-</html>
+{% extends "base.html" %}
+{% load markup %}
+{% load thumbnail %}
+
+{% block title %}{{ flatpage.title }}{% endblock %}
+
+{% block content %}
+
+<h1 id="masthead"><span>{{ flatpage.title }}</span></h1>
+
+<ul id="nav">
+<li><a href="/">Home</a></li>
+<li><a href="/about/">About</a></li> 
+<li><a href="/roster/">Roster</a></li> 
+<li><a href="/archives/">Archives</a></li> 
+<li><a href="/links/">Links</a></li> 
+<li><a href="/contact/">Contact</a></li>
+</ul>
+
+<h2>{{ flatpage.title }}</h2>
+
+{{ flatpage.content|markdown}}
+
+{% endblock %}
