refactored templates and updated layout

--- a/fu/templates/issue.html
+++ b/fu/templates/issue.html
@@ -3,17 +3,8 @@
 {% load thumbnail %}
 {% block title %}{{ issue.pub_date }}{% endblock %}
 {% block bodyclass %}issue{% endblock %}
+{% block masthead %}{{ issue.pub_date }}{% endblock %}
 {% block content %}
-<h1 id="masthead"><span>the-fu.com: {{ issue.pub_date }}</span></h1>
-
-<ul id="nav">
-<li><a href="/">Home</a></li>
-<li><a href="/about/">About</a></li> 
-<li><a href="/roster/">Roster</a></li> 
-<li><a href="/archives/">Archives</a></li> 
-<li><a href="/links/">Links</a></li> 
-<li><a href="/contact/">Contact</a></li>
-</ul>
 
 <div id="faux">
 <div id="main">
