--- a/fu/templates/article.html
+++ b/fu/templates/article.html
@@ -4,18 +4,9 @@
 
 {% block title %}{{ article.headline }}{% endblock %}
 {% block bodyclass %}article{% endblock %}
+{% block masthead %}{{ article.headline }}{% endblock %}
 
 {% block content %}
-<h1 id="masthead"><span>the-fu.com: {{ article.headline }}</span></h1>
-
-<ul id="nav">
-<li><a href="/">Home</a></li>
-<li><a href="/about/">About</a></li> 
-<li><a href="/roster/">Roster</a></li> 
-<li><a href="/archives/">Archives</a></li> 
-<li><a href="/links/">Links</a></li> 
-<li><a href="/contact/">Contact</a></li>
-</ul>
 
 {% if article.cartoon %}
 
