--- a/fu/templates/base.html
+++ b/fu/templates/base.html
@@ -7,7 +7,27 @@
 
 </head>
 <body class="{% block bodyclass %}{% endblock %}">
+
+
 <div id="wrapper">
+<h1 id="masthead"><span>the-fu.com: {% block masthead %}{% endblock %}</span></h1>
+
+<div id="definition">
+<b>Definition of <span class="gold">FU</span></b>: <b>1.</b> Chinese word for luck or good
+fortune. <b>2.</b> Abbreviation of <span class="gold">FU</span>ture - a unanimous hope for
+society. <b>3.</b> Acronym for a well-known expletive, used primarily during
+differences of opinion.
+</div>
+
+<ul id="nav">
+<li><a href="/">Home</a></li>
+<li><a href="/about/">About</a></li> 
+<li><a href="/roster/">Roster</a></li> 
+<li><a href="/archives/">Archives</a></li> 
+<li><a href="/links/">Links</a></li> 
+<li><a href="/contact/">Contact</a></li>
+</ul>
+
 {% block content %}{% endblock %}
 
 
