--- a/fu/templates/flatpages/default.html
+++ b/fu/templates/flatpages/default.html
@@ -3,19 +3,8 @@
 {% load thumbnail %}
 
 {% block title %}{{ flatpage.title }}{% endblock %}
-
+{% block masthead %}{{ flatpage.title }}{% endblock %}
 {% block content %}
-
-<h1 id="masthead"><span>{{ flatpage.title }}</span></h1>
-
-<ul id="nav">
-<li><a href="/">Home</a></li>
-<li><a href="/about/">About</a></li> 
-<li><a href="/roster/">Roster</a></li> 
-<li><a href="/archives/">Archives</a></li> 
-<li><a href="/links/">Links</a></li> 
-<li><a href="/contact/">Contact</a></li>
-</ul>
 
 <h2>{{ flatpage.title }}</h2>
 
