--- a/fu/templates/issue.html
+++ b/fu/templates/issue.html
@@ -32,7 +32,12 @@
 
 <div class="article">
 <div class="article-thumb">
-<img src="{% thumbnail article.author.headshot 65x65 crop,bw,upscale %}" width="65" height="65" />
+{% thumbnail article.author.headshot 65x65 crop,bw,upscale as bwheadshot %}
+{% thumbnail article.author.headshot 65x65 crop,upscale as colorheadshot %}
+<a href="{{ article.get_absolute_url }}"><img src="{{ bwheadshot }}" 
+onmouseover="this.src = '{{colorheadshot}}'" 
+onmouseout="this.src = '{{ bwheadshot }}'"
+width="65" height="65" border="0" /></a>
 </div>
 <h2><a href="{{ article.get_absolute_url }}">{{ article.headline }}</a></h2>
 <p>{{ article.author.fullname }}</p>
