atom feeds added

--- a/fu/templates/base.html
+++ b/fu/templates/base.html
@@ -6,6 +6,9 @@
 </style>
 {% block js %}{% endblock %}
 
+
+<link href="/feeds/main/" type="application/atom+xml" rel="alternate" title="Atom feed the-fu.com" />
+
 </head>
 <body class="{% block bodyclass %}{% endblock %}">
 
