needed full urls in feeds

--- a/fu/templates/feeds/main_description.html
+++ b/fu/templates/feeds/main_description.html
@@ -2,7 +2,7 @@
 {% load markup %}
 {% if obj.cartoon %}
 
-<img src="{% thumbnail article.image 500x30000 %}" width="500" alt="" />
+<img src="http://the-fu.com{% thumbnail article.image 500x30000 %}" width="500" alt="" />
 
 {% else %}
 
@@ -14,7 +14,7 @@
 
 <div id="byline">
 <div class="article-thumb">
-<img src="{% thumbnail obj.author.headshot 65x65 crop,upscale %}"
+<img src="http://the-fu.com{% thumbnail obj.author.headshot 65x65 crop,upscale %}"
      width="65" height="65" />
 </div>
 <p>{{ obj.author.fullname}}</p>
