made "in this issue" gigantic

--- a/media/css/site.css
+++ b/media/css/site.css
@@ -180,3 +180,6 @@ body.roster .author-bio .close {
 
 .close-link { color: #fc3;}
 
+#sidebar h2 {font-size: 2.2em;}
+
+#sidebar .article h2 {font-size: 1.1em;}
