made "centering roster

--- a/fu/templates/roster.html
+++ b/fu/templates/roster.html
@@ -15,6 +15,7 @@
 {% block masthead %}roster{% endblock %}
 {% block content %}
 
+<div id="roster">
 <p>Our writers are young thinkers with various passions and pursuits,
   situated around the world.</p>
 
@@ -50,4 +51,5 @@ onmouseout="this.src = '{{bwheadshot}}'"
 
 
 <div class="clear"></div>
+</div>
 {% endblock %}
