roster -> team rename

--- a/fu/templates/base.html
+++ b/fu/templates/base.html
@@ -26,7 +26,7 @@ differences of opinion.
 <ul id="nav">
 <li><a href="/">Home</a></li>
 <li><a href="/about/">About</a></li> 
-<li><a href="/roster/">Roster</a></li> 
+<li><a href="/team/">Team</a></li> 
 <li><a href="/archives/">Archives</a></li> 
 <li><a href="/links/">Links</a></li> 
 <li><a href="/contact/">Contact</a></li>
