--- a/fu/templates/team.html
+++ b/fu/templates/team.html
@@ -2,20 +2,20 @@
 {% load markup %}
 {% load thumbnail %}
 
-{% block title %}Roster{% endblock %}
+{% block title %}team{% endblock %}
 {% block js %}
 
 <script type="text/javascript"
 	src="/site_media/js/mochikit/MochiKit/MochiKit.js"></script>
-<script type="text/javascript" src="/site_media/js/roster.js"></script>
+<script type="text/javascript" src="/site_media/js/team.js"></script>
 
 {% endblock %}
 
-{% block bodyclass %}roster{% endblock %}
-{% block masthead %}roster{% endblock %}
+{% block bodyclass %}team{% endblock %}
+{% block masthead %}team{% endblock %}
 {% block content %}
 
-<div id="roster">
+<div id="team">
 <p>Our writers are young thinkers with various passions and pursuits,
   situated around the world.</p>
 
