--- a/media/css/site.css
+++ b/media/css/site.css
@@ -2,7 +2,7 @@
 
 body {
      margin: 0px;
-     font-family:"Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif;
+     font-family:"Trebuchet MS", "Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif;
 }
 
 h1 {
