bio popup experiment

--- a/media/css/site.css
+++ b/media/css/site.css
@@ -166,6 +166,8 @@ body.team p {
     position: fixed;
     margin-left: auto;
     margin-right: auto;
+    margin-top: auto;
+    margin-left: auto;
     padding: 2px;
 //    top: 200px;
 }
