bio popup experiment

--- a/fu/templates/team.html
+++ b/fu/templates/team.html
@@ -36,7 +36,7 @@ onmouseout="this.src = '{{bwheadshot}}'"
 
 </div>
 
-<div class="author-bio" id="author-bio-{{author.id}}">
+<div class="author-bio invisible" id="author-bio-{{author.id}}">
 <h2>{{ author.fullname }}</h2>
 <div class="bio-inner">
 <div class="headshot"><img src="{% thumbnail author.headshot 200x200 crop %}" width="200"
