--- a/media/css/site.css
+++ b/media/css/site.css
@@ -169,7 +169,7 @@ body.team p {
     margin-left: auto;
     margin-right: auto;
     padding: 2px;
-    top: 200px;
+//    top: 200px;
 }
 
 .invisible {
