--- a/media/css/site.css
+++ b/media/css/site.css
@@ -206,5 +206,7 @@ body.team .author-bio .close {
 
 #sidebar .article h2 {font-size: 1.1em;}
 
+body.team #main { text-align: center;}
+
 #team { width: 650px; margin-left: auto; margin-right: auto;
- text-align: center;}
+ text-align: left;}
