--- a/media/css/site.css
+++ b/media/css/site.css
@@ -169,6 +169,7 @@ body.team p {
     padding: 2px;
     text-align: center;
     top: 200px;
+    border: #fc3 dashed 2px;
 }
 
 .invisible {
@@ -208,5 +209,4 @@ body.team .author-bio .close {
 
 body.team #main { text-align: center;}
 
-#team { width: 650px; margin-left: auto; margin-right: auto;
- text-align: left;}
+#team { width: 650px; margin-left: auto; margin-right: auto; text-align: left;}
