--- a/fu/templates/base.html
+++ b/fu/templates/base.html
@@ -17,10 +17,10 @@
 <h1 id="masthead"><span>the-fu.com: {% block masthead %}{% endblock %}</span></h1>
 
 <div id="definition">
-<b>Definition of <span class="gold">FU</span></b>: <b>1.</b> Chinese word for luck or good
+<span><b>Definition of <span class="gold">FU</span></b>: <b>1.</b> Chinese word for luck or good
 fortune. <b>2.</b> Abbreviation of <span class="gold">FU</span>ture - a unanimous hope for
 society. <b>3.</b> Acronym for a well-known expletive, used primarily during
-differences of opinion.
+differences of opinion.</span>
 </div>
 
 <ul id="nav">
