--- a/media/css/site.css
+++ b/media/css/site.css
@@ -231,3 +231,5 @@ body.team .author-bio .close {
 body.team #main { text-align: center;}
 
 #team { width: 650px; margin-left: auto; margin-right: auto; text-align: left;}
+
+#sidebar .article-thumb a { border-bottom: none;}
