--- a/fu/templates/links.html
+++ b/fu/templates/links.html
@@ -10,9 +10,34 @@
 <h2><span>Fuel</span></h2>
 
 <ul>
-<li>I</li>
-<li>need</li>
-<li>content</li>
+
+<li><a href="http://www.adliterate.com/">Ad Literate</a></li>
+<li><a href="http://www.buzzfeed.com">Buzzfeed</a></li>
+<li><a href="http://www.coolbusinessideas.com/">Cool Business Ideas</a></li>
+<li><a href="http://www.thecoolhunter.net/">Cool Hunter</a></li>
+<li><a href="http://www.coolhunting.com/">Cool Hunting</a></li>
+<li><a href="http://www.coolhunting.com/">Core 77</a></li>
+<li><a href="http://www.dumblittleman.com/">Dumb Little Man</a></li>
+<li><a href="http://gothamist.com/">Gothamist</a></li>
+<li><a href="http://www.iconoculture.com/">Iconococulture</a></li>
+<li><a href="http://www.ifweranit.com/">If We Ran It</a></li>
+<li><a href="http://www.ifweranit.com/">Influx Insights</a></li>
+<li><a href="http://www.ifweranit.com/">Kottke</a></li>
+<li><a href="http://mocoloco.com/">MoCo Loco</a></li>
+<li><a href="http://mocoloco.com/">Monocle Magazine</a></li>
+<li><a href="http://www.nationalgeographic.com/">National Geographic</a></li>
+<li><a href="http://www.neatorama.com/">Neatorama</a></li>
+<li><a href="http://nowandnext.com/">Penguin Blog</a></li>
+<li><a href="http://www.psfk.com/">PSFK</a></li>
+<li><a href="http://www.reveries.com/">Reveries Magazine</a></li>
+<li><a href="http://sethgodin.typepad.com/">Seth’s Blog</a></li>
+<li><a href="http://www.slate.com">Slate Magazine</a></li>
+<li><a href="http://www.springwise.com/">Springwise</a></li>
+<li><a href="http://www.ted.com/">TED</a></li>
+<li><a href="http://www.trendsnow.net/">Trends Now</a></li>
+<li><a href="http://www.urbanjunkies.com/london/">Urban Junkies</a></li>
+<li><a href="http://nowandnext.com/">What’s Next?</a></li>
+<li><a href="http://www.urbanjunkies.com/london/">Where’s The Sausage </a></li>
 </ul>
 </div>
 
@@ -20,9 +45,26 @@
 <h2><span>Fun</span></h2>
 
 <ul>
-<li>I</li>
-<li>need</li>
-<li>content</li>
+
+<li><a href="http://www.behance.com/">Behance</a></l>
+<li><a href="http://www.behance.com/"> Black Book</a></li>
+<li><a href="http://www.boingboing.net/"> Boing Boing</a></li>
+<li><a href="http://www.boingboing.net/">CRAFT Magazine</a></li>
+<li><a href="http://www.dailycandy.com/">Daily Candy</a></li>
+<li><a href="http://www.disconap.blogspot.com/">Disconap</a></li>
+<li><a href="http://www.etsy.com/">Etsy</a></li>
+<li><a href="http://www.gapingvoid.com/">Gaping Void</a></li>
+<li><a href="http://gawker.com/">Gawker</a></li>
+<li><a href="http://newyork.going.com/">Going</a></li>
+<li><a href="http://indexed.blogspot.com/">Indexed</a></li>
+<li><a href="http://jezebel.com/">Jezebel</a></li>
+<li><a href="http://www.kidethnic.com/">Kid Ethnic</a></li>
+<li><a href="http://www.makezine.com/">MAKE magazine</a></li>
+<li><a href="http://www.notcot.org/">NOT COT</a></li>
+<li><a href="http://www.nylonmag.com/">NYLON</a></li>
+<li><a href="http://thesartorialist.blogspot.com/">Sartorialist</a></li>
+<li><a href="http://streetpeeper.com/">Street Peeper</a></li>
+
 </ul>
 </div>
 
