nav link colors

--- a/fu/templates/about.html
+++ b/fu/templates/about.html
@@ -4,6 +4,7 @@
 
 {% block title %}about{% endblock %}
 {% block masthead %}about{% endblock %}
+{% block bodyclass %}about{% endblock %}
 {% block content %}
 
 <h2 id="about-header"><span>ABOUT</span></h2>
