--- a/fu/templates/base.html
+++ b/fu/templates/base.html
@@ -24,12 +24,12 @@ differences of opinion.</span>
 </div>
 
 <ul id="nav">
-<li><a href="/">Home</a></li>
-<li><a href="/about/">About</a></li> 
-<li><a href="/team/">Team</a></li> 
-<li><a href="/archives/">Archives</a></li> 
-<li><a href="/links/">Links</a></li> 
-<li><a href="/contact/">Contact</a></li>
+<li id="home-nav-link"><a href="/">Home</a></li>
+<li id="about-nav-link"><a href="/about/">About</a></li> 
+<li id="team-nav-link"><a href="/team/">Team</a></li> 
+<li id="archives-nav-link"><a href="/archives/">Archives</a></li> 
+<li id="links-nav-link"><a href="/links/">Links</a></li> 
+<li id="contact-nav-link"><a href="/contact/">Contact</a></li>
 </ul>
 
 {% block content %}{% endblock %}
