--- a/fu/templates/contact.html
+++ b/fu/templates/contact.html
@@ -4,6 +4,7 @@
 
 {% block title %}contact{% endblock %}
 {% block masthead %}contact{% endblock %}
+{% block bodyclass %}contact{% endblock %}
 {% block content %}
 
 <h2 id="contact-header"><span>CONTACT</span></h2>
