--- a/fu/templates/links.html
+++ b/fu/templates/links.html
@@ -4,6 +4,7 @@
 
 {% block title %}links{% endblock %}
 {% block masthead %}links{% endblock %}
+{% block bodyclass %}links{% endblock %}
 {% block content %}
 
 <div id="links-fuel">
