--- a/fu/templates/flatpages/default.html
+++ b/fu/templates/flatpages/default.html
@@ -4,6 +4,7 @@
 
 {% block title %}{{ flatpage.title }}{% endblock %}
 {% block masthead %}{{ flatpage.title }}{% endblock %}
+{% block bodyclass %}{{ flatpage.title|lower }}{% endblock %}
 {% block content %}
 
 <h2>{{ flatpage.title }}</h2>
