--- a/fu/templates/issue.html
+++ b/fu/templates/issue.html
@@ -30,7 +30,7 @@
 
 <div id="sidebar">
 
-<h2>In This Issue</h2>
+<h2 class="sidebar-main">In This Issue</h2>
 
 {% for article in issue.non_main_articles %}
 
