--- a/fu/templates/article.html
+++ b/fu/templates/article.html
@@ -46,7 +46,7 @@
 
 <div id="sidebar">
 
-<h2>In This Issue</h2>
+<h2 class="sidebar-main">In This Issue</h2>
 
 {% for article in article.issue.non_main_articles %}
 
