--- a/media/css/site.css
+++ b/media/css/site.css
@@ -237,7 +237,8 @@ body.team .author-bio .close {
 
 .close-link { color: #fc3;}
 
-#sidebar h2 {font-size: 26px; margin-top: 3em;}
+#sidebar h2 {font-size: 26px; }
+#sidebar h2.sidebar-main { margin-top: 3em;}
 
 #sidebar .article h2 {font-size: 14px;}
 
