--- a/fu/templates/links.html
+++ b/fu/templates/links.html
@@ -17,18 +17,18 @@
 <li><a href="http://www.coolbusinessideas.com/">Cool Business Ideas</a></li>
 <li><a href="http://www.thecoolhunter.net/">Cool Hunter</a></li>
 <li><a href="http://www.coolhunting.com/">Cool Hunting</a></li>
-<li><a href="http://www.coolhunting.com/">Core 77</a></li>
+<li><a href="http://www.core77.com/">Core 77</a></li>
 <li><a href="http://www.dumblittleman.com/">Dumb Little Man</a></li>
 <li><a href="http://gothamist.com/">Gothamist</a></li>
-<li><a href="http://www.iconoculture.com/">Iconococulture</a></li>
+<li><a href="http://www.iconoculture.com/">Iconoculture</a></li>
 <li><a href="http://www.ifweranit.com/">If We Ran It</a></li>
-<li><a href="http://www.ifweranit.com/">Influx Insights</a></li>
-<li><a href="http://www.ifweranit.com/">Kottke</a></li>
+<li><a href="http://www.influxinsights.com/">Influx Insights</a></li>
+<li><a href="http://www.kottke.org/">Kottke</a></li>
 <li><a href="http://mocoloco.com/">MoCo Loco</a></li>
-<li><a href="http://mocoloco.com/">Monocle Magazine</a></li>
+<li><a href="http://monocle.com/">Monocle Magazine</a></li>
 <li><a href="http://www.nationalgeographic.com/">National Geographic</a></li>
 <li><a href="http://www.neatorama.com/">Neatorama</a></li>
-<li><a href="http://nowandnext.com/">Penguin Blog</a></li>
+<li><a href="http://thepenguinblog.typepad.com/">Penguin Blog</a></li>
 <li><a href="http://www.psfk.com/">PSFK</a></li>
 <li><a href="http://www.reveries.com/">Reveries Magazine</a></li>
 <li><a href="http://sethgodin.typepad.com/">Seth’s Blog</a></li>
@@ -50,7 +50,7 @@
 <li><a href="http://www.behance.com/">Behance</a></l>
 <li><a href="http://www.behance.com/"> Black Book</a></li>
 <li><a href="http://www.boingboing.net/"> Boing Boing</a></li>
-<li><a href="http://www.boingboing.net/">CRAFT Magazine</a></li>
+<li><a href="http://www.craftzine.com/">CRAFT Magazine</a></li>
 <li><a href="http://www.dailycandy.com/">Daily Candy</a></li>
 <li><a href="http://www.disconap.blogspot.com/">Disconap</a></li>
 <li><a href="http://www.etsy.com/">Etsy</a></li>
