--- a/fu/templates/article.html
+++ b/fu/templates/article.html
@@ -8,7 +8,20 @@
 
 {% block content %}
 
+
+
 {% if article.cartoon %}
+
+<h2>{{ article.headline }}</h2>
+
+<div id="byline">
+<div class="article-thumb">
+<img src="{% thumbnail article.author.headshot 65x65 crop,upscale %}"
+     width="65" height="65" />
+</div>
+<p>{{ article.author.fullname}}</p>
+</div>
+
 
 <img src="{% thumbnail article.image 850x30000 %}" width="850" alt="" />
 
@@ -17,6 +30,16 @@
 <div id="main">
 
 <h2>{{ article.headline }}</h2>
+
+<div id="byline">
+<div class="article-thumb">
+<img src="{% thumbnail article.author.headshot 65x65 crop,upscale %}"
+     width="65" height="65" />
+</div>
+<p>{{ article.author.fullname}}</p>
+</div>
+
+
 {% if article.image %}
 <div class="article-thumb">
 <img src="{% thumbnail article.image 200x200 crop %}"
@@ -31,14 +54,6 @@
 {{ article.content|markdown }}
 
 {% endif %}
-
-<div id="byline">
-<div class="article-thumb">
-<img src="{% thumbnail article.author.headshot 65x65 crop,upscale %}"
-     width="65" height="65" />
-</div>
-<p>{{ article.author.fullname}}</p>
-</div>
 
 
 {% if not article.cartoon %}
