--- a/fu/templates/article.html
+++ b/fu/templates/article.html
@@ -12,7 +12,7 @@
 
 {% if article.cartoon %}
 
-<h2>{{ article.headline }}</h2>
+<h2 class="cartoon">{{ article.headline }}</h2>
 
 <div id="byline">
 <div class="article-thumb">
