--- a/media/css/site.css
+++ b/media/css/site.css
@@ -140,6 +140,7 @@ h2 { font-size: 14px;}
 
 #main h2 { font-size: 1.9em; margin-bottom: 1em; margin-top: 1em;}
 
+h2.cartoon {color: #999; font-size: 1.9em;}
 body.article #main h2 { color: #999; }
 
 body.article #byline .article-thumb { display: block; float: none;}
