--- a/fu/templates/base.html
+++ b/fu/templates/base.html
@@ -35,7 +35,16 @@ society. <b>3.</b> Acronym for a well-known expletive, used primarily during
 differences of opinion.</span>
 </div>
 
-<div id="footer"></div>
+<div id="footer">
+<div id="credits">Site Design: <b>Sarah Wefald</b>, Banner
+  graphics: <b>Saleem Reshamwala</b>, Backend coding and
+  sysadmin: <b>Anders Pearson</b></div>
+<div id="feedlink"><a
+   href="/feeds/main/"><img
+   src="http://mt.onikaverse.com/mt/mt-static/images/status_icons/feed.gif"
+   alt="Subscribe to feed" height="9" width="9" border="0" />
+   Subscribe to feed</a></div>
+</div>
 </div>
 </body>
 </html>
