comments now enabled

--- a/fu/templates/base.html
+++ b/fu/templates/base.html
@@ -4,6 +4,7 @@
 <style media="screen" type="text/css">
 @import "/site_media/css/site.css" ;
 </style>
+<script type="text/javascript" src="/site_media/js/comments.js"></script>
 {% block js %}{% endblock %}
 
 
