footer + definition only on issue page now

--- a/fu/templates/issue.html
+++ b/fu/templates/issue.html
@@ -105,4 +105,24 @@ width="65" height="65" border="0" /></a>
 <div id="clear"></div>
 </div>
 </div>
+
+<div id="definition">
+<span><b>Definition of <span class="gold">FU</span></b>: <b>1.</b> Chinese word for luck or good
+fortune. <b>2.</b> Abbreviation of <span class="gold">FU</span>ture - a unanimous hope for
+society. <b>3.</b> Acronym for a well-known expletive, used primarily during
+differences of opinion.</span>
+</div>
+
+
+
+<div id="footer">
+<div id="credits">Site Design: <b>Sarah Wefald</b>, Banner
+  graphics: <b>Saleem Reshamwala</b>, Backend coding and
+  sysadmin: <b>Anders Pearson</b></div>
+<div id="feedlink"><a
+   href="/feeds/main/"><img
+   src="http://mt.onikaverse.com/mt/mt-static/images/status_icons/feed.gif"
+   alt="Subscribe to feed" height="9" width="9" border="0" />
+   Subscribe to feed</a></div>
+</div>
 {% endblock %}
